--- a/metadata.yaml
+++ b/metadata.yaml
@@ -36,6 +36,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcc 'D501'
 - !lcsh 'World War, 1914-1918 -- Causes'
+- GITenberg
 title: "The Evidence in the Case\r\nA Discussion of the Moral Responsibility for the\
   \ War of 1914, as Disclosed by the Diplomatic Records of England, Germany, Russia"
 url: http://www.gutenberg.org/ebooks/31457
